# docs/swagger.json
@@ -696,7 +696,7 @@
         },
         "/user/info": {
             "put": {
-                "description": "获取用户登录信息",
+                "description": "编辑用户登录信息",
                 "produces": [
                     "application/json"
                 ],
@@ -705,6 +705,12 @@
                 ],
                 "summary": "Info",
                 "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "UID",
+                        "name": "uid",
+                        "in": "query"
+                    },
                     {
                         "description": "EditForm",
                         "name": "form",
@@ -763,6 +769,34 @@
                     "Account"
                 ],
                 "summary": "Logout",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/user/photo": {
+            "put": {
+                "description": "获取更改头像",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Info",
+                "parameters": [
+                    {
+                        "description": "PhotoFrom",
+                        "name": "form",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/accountservice.PhotoFrom"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -956,6 +990,9 @@
         },
         "accountservice.EditForm": {
             "type": "object",
+            "required": [
+                "id"
+            ],
             "properties": {
                 "bio": {
                     "type": "string",
@@ -969,19 +1006,13 @@
                     "type": "string",
                     "example": "mele"
                 },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
                 "name": {
                     "type": "string",
                     "example": "志明"
-                },
-                "photo_base64": {
-                    "type": "string"
-                },
-                "photourl": {
-                    "type": "string"
-                },
-                "user_name": {
-                    "type": "string",
-                    "example": "zzk"
                 },
                 "website": {
                     "type": "string",
@@ -1003,6 +1034,17 @@
                 "password": {
                     "type": "string",
                     "example": "123456"
+                }
+            }
+        },
+        "accountservice.PhotoFrom": {
+            "type": "object",
+            "properties": {
+                "data_list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/upload.DataList"
+                    }
                 }
             }
         },
@@ -1123,6 +1165,37 @@
                 },
                 "place": {
                     "type": "string"
+                }
+            }
+        },
+        "upload.DataList": {
+            "type": "object",
+            "properties": {
+                "base64Date": {
+                    "type": "string"
+                },
+                "blob": {
+                    "type": "string"
+                },
+                "blobData": {},
+                "cropedBlobUrl": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "percentage": {
+                    "type": "integer"
+                },
+                "raw": {},
+                "size": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "uid": {
+                    "type": "integer"
                 }
             }
         }
